--- a/sass/output.css
+++ b/sass/output.css
@@ -237,4 +237,18 @@ footer {
   font-size: 0.5em;
 }
 
+@media screen and (min-width: 769px) {
+  .card {
+    display: flex;
+    flex-direction: row;
+  }
+  .totals {
+    width: 50%;
+    flex: 0 0 auto;
+  }
+  footer {
+    display: none;
+  }
+}
+
 /*# sourceMappingURL=output.css.map */
